tests/__snapshots__/validation-target-wrong-option-value-type-stderr.snap.txt
Error: Option 'target' requires a value of type list.

  1 | {
  2 |   "target": "current"
    |             ~~~~~~~~~
  3 | }

      at ./tstyche.config.json:2:13

